{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 77,
  "lineage": "f9f73673-4d5f-e837-5510-218dda7c5409",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d191299f2822b1fa",
            "arn": "arn:aws:ec2:us-east-1:851725255384:instance/i-0100011a3d2faa6da",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0100011a3d2faa6da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "kpk8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0946ca616acd3dd23",
            "private_dns": "ip-10-0-2-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.150",
            "public_dns": "ec2-54-210-235-207.compute-1.amazonaws.com",
            "public_ip": "54.210.235.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f2bbc537c1f60bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002e911dad8e0c98d",
            "tags": {
              "ManegedBy": "Terraform"
            },
            "tags_all": {
              "ManegedBy": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "ManegedBy": "Terraform"
            },
            "vpc_security_group_ids": [
              "sg-0f6374ab037cb6d16"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-001",
            "aws_subnet.pb-001",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:internet-gateway/igw-007b4d8a2de18b4ab",
            "id": "igw-007b4d8a2de18b4ab",
            "owner_id": "851725255384",
            "tags": {
              "ManegedBy": "Terraform"
            },
            "tags_all": {
              "ManegedBy": "Terraform"
            },
            "vpc_id": "vpc-082fdedd70cda1258"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:route-table/rtb-09cf3ba533efe440d",
            "id": "rtb-09cf3ba533efe440d",
            "owner_id": "851725255384",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007b4d8a2de18b4ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManegedBy": "Terraform"
            },
            "tags_all": {
              "ManegedBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-082fdedd70cda1258"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pb-001-to-rt001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e9c1bfdf409918b",
            "route_table_id": "rtb-09cf3ba533efe440d",
            "subnet_id": "subnet-002e911dad8e0c98d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt001",
            "aws_subnet.pb-001",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pb-002-to-rt001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3c0cc9eb50345ab",
            "route_table_id": "rtb-09cf3ba533efe440d",
            "subnet_id": "subnet-0ac0b6e0b3fca9ed6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt001",
            "aws_subnet.pb-002",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:security-group/sg-0f6374ab037cb6d16",
            "description": "Security group test tf",
            "egress": [],
            "id": "sg-0f6374ab037cb6d16",
            "ingress": [],
            "name": "security grou default allow http and ssh",
            "name_prefix": "",
            "owner_id": "851725255384",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManegedBy": "Terraform"
            },
            "tags_all": {
              "ManegedBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-082fdedd70cda1258"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pb-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:subnet/subnet-002e911dad8e0c98d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002e911dad8e0c98d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725255384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManegedBy": "Terraform"
            },
            "tags_all": {
              "ManegedBy": "Terraform"
            },
            "vpc_id": "vpc-082fdedd70cda1258"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pb-002",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:subnet/subnet-0ac0b6e0b3fca9ed6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac0b6e0b3fca9ed6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725255384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManegedBy": "Terraform"
            },
            "tags_all": {
              "ManegedBy": "Terraform"
            },
            "vpc_id": "vpc-082fdedd70cda1258"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:subnet/subnet-0cc62a84d87481ce1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc62a84d87481ce1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725255384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManegedBy": "Terraform"
            },
            "tags_all": {
              "ManegedBy": "Terraform"
            },
            "vpc_id": "vpc-082fdedd70cda1258"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-002",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:subnet/subnet-07fd90ae1044943bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fd90ae1044943bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725255384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManegedBy": "Terraform"
            },
            "tags_all": {
              "ManegedBy": "Terraform"
            },
            "vpc_id": "vpc-082fdedd70cda1258"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:vpc/vpc-082fdedd70cda1258",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-024197821c0cbd9e5",
            "default_route_table_id": "rtb-0e0bb71af36ff508e",
            "default_security_group_id": "sg-0feebe7d1eee04d98",
            "dhcp_options_id": "dopt-09be9c6ecf158293f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-082fdedd70cda1258",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e0bb71af36ff508e",
            "owner_id": "851725255384",
            "tags": {
              "ManegedBy": "Terraform"
            },
            "tags_all": {
              "ManegedBy": "Terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_total",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:security-group-rule/sgr-0f5a95a4fbfdec950",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "total exit",
            "from_port": null,
            "id": "sgr-0f5a95a4fbfdec950",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f6374ab037cb6d16",
            "security_group_rule_id": "sgr-0f5a95a4fbfdec950",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-001",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:security-group-rule/sgr-01ad75fdaa1f10c97",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow http from web",
            "from_port": 80,
            "id": "sgr-01ad75fdaa1f10c97",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f6374ab037cb6d16",
            "security_group_rule_id": "sgr-01ad75fdaa1f10c97",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-001",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725255384:security-group-rule/sgr-006352a4cfa7f85f0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow ssh from web",
            "from_port": 22,
            "id": "sgr-006352a4cfa7f85f0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f6374ab037cb6d16",
            "security_group_rule_id": "sgr-006352a4cfa7f85f0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-001",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    }
  ]
}